<resources>
    <string name="app_name">SMA N 1 Bungo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sman_1_muara_bungo">SMAN 1 Muara Bungo</string>
    <string name="home">Home</string>
    <string name="jadwal">Jadwal</string>
    <string name="profile">Profile</string>
    <string name="tambah_gaji">Tambah Gaji</string>
    <string name="double_dot">:</string>
    <string name="edit_gaji">Edit Gaji</string>
    <string name="gaji_pokok">Gaji Pokok</string>
    <string name="id_gaji">ID Gaji</string>
    <string name="save_gaji">Save Gaji</string>
    <string name="tambah_pelajaran">Tambah Pelajaran</string>
    <string name="edit_pelajaran">Edit Pelajaran</string>
    <string name="delete_pelajaran">Delete Pelajaran</string>
    <string name="delete_gaji">Delete Gaji</string>
    <string name="id_pelajaran">ID Pelajaran</string>
    <string name="nama">Nama</string>
    <string name="save_pelajaran">Save Pelajaran</string>
    <string name="level">Level</string>
    <string name="administrator">Admin</string>
    <string name="guru">Guru</string>
    <string name="tambah_guru">Tambah Guru</string>
    <string name="edit_guru">Edit Guru</string>
    <string name="delete_guru">Delete Guru</string>
    <string name="nip">NIP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="jenis_kelamin">Jekel</string>
    <string name="laki_laki">Laki laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="save_guru">Save Guru</string>
    <string name="tanggal">Tanggal</string>
    <string name="golongan">Golongan</string>
    <string name="pelajaran">Pelajaran</string>
    <string name="gaji">Gaji</string>
    <string name="pegawai">Pegawai</string>
    <string name="edit_pegawai">Edit Pegawai</string>
    <string name="tambah_pegawai">Tambah Pegawai</string>
    <string name="save_pegawai">Save Pegawai</string>
    <string name="jabatan">Jabatan</string>
    <string name="id_pegawai">ID Pegawai</string>
    <string name="siswa">Siswa</string>
    <string name="tambah_siswa">Tambah Siswa</string>
    <string name="kelas">Kelas</string>
    <string name="tambah_kelas">Tambah Kelas</string>
    <string name="id_kelas">ID Kelas</string>
    <string name="wali_kelas">Wali Kelas</string>
    <string name="edit_kelas">Edit Kelas</string>
    <string name="delete_kelas">Delete Kelas</string>
    <string name="save_kelas">Save Kelas</string>
    <string name="edit_siswa">Edit Siswa</string>
    <string name="delete_siswa">Delete Siswa</string>
    <string name="save_siswa">Save Siswa</string>
    <string name="nisn">NISN</string>
    <string name="edit_sekolah">Edit Sekolah</string>
    <string name="nama_sekolah">Nama Sekolah</string>
    <string name="alamat_sekolah">Alamat Sekolah</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="title_activity_detail_sekolah_maps">Map</string>
    <string name="lokasi_sekolah">Lokasi Sekolah</string>
    <string name="sekolah">Sekolah</string>
    <string name="save_sekolah">Save Sekolah</string>
    <string name="show_full_map">Show Full Map</string>

    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="register">Register</string>
    <string name="pilih_status">Pilih Status</string>
    <string name="ok">OK</string>
    <string name="absen">Absen</string>
    <string name="todo_list">Todo List</string>
    <string name="nilai_siswa">Nilai Siswa</string>
    <string name="tugas">Tugas</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="about_school">About School</string>
    <string name="edit_email_and_no_hp">Edit Email and No Hp</string>
    <string name="edit_born_date">Edit Born Date</string>
    <string name="kota_lahir">Kota Lahir</string>
    <string name="provinsi_lahir">Provinsi Lahir</string>
    <string name="email">Email</string>
    <string name="no_hp">No Hp</string>
    <string name="about_app">About App</string>
    <string name="zukron_alviandy_rahmadhan">Zukron Alviandy Rahmadhan</string>
    <string name="created_by">Created By</string>
    <string name="no_bp">No BP</string>
    <string name="_1811081030">1811081030</string>
    <string name="trpl_2b">TRPL 2B</string>
    <string name="edit_no_hp">Edit No Hp</string>
    <string name="tambah_administrator">Tambah Admin</string>
    <string name="id_admin">ID Admin</string>
    <string name="save_admin">Save Admin</string>
    <string name="edit_admin">Edit Admin</string>
    <string name="tambah_admin">Tambah Admin</string>
</resources>
