<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_edit_born_date_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_born_date"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_edit_email_and_no_hp_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_email_and_no_hp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_about_school_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_school"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_about_app_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_log_out_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>